<resources>
    <string name="app_name">UniversityLife</string>
    <string name="welcome_message">Welcome!</string>
    <string name="login_button">Log In</string>
    <string name="signup_button">Sign Up</string>
    <string name="password_hint">Password</string>
    <string name="username_hint">Username</string>
    <string name="game1_name">Math Mania</string>
    <string name="game2_name">Catching Good Habits</string>
    <string name="game3_name">Extreme Archery</string>



    <string name="customization_message">Customize Your Character</string>
    <string name="customization_message2">Give your character a cool name!</string>
    <string name="confirm_button">Confirm</string>
    <string name="start">Start</string>
    <string name="textview5">TextView</string>
    <string name="textview6">TextView</string>
    <string name="textview8">TextView</string>
    <string name="textview10">TextView</string>
</resources>
